RESOLVED FIXED89931
[chromium] Fix incorrect #ifdef WEBKIT_IMPLEMENTATION statements
https://bugs.webkit.org/show_bug.cgi?id=89931
Summary [chromium] Fix incorrect #ifdef WEBKIT_IMPLEMENTATION statements
Shawn Singh
Reported 2012-06-25 18:01:00 PDT
Some places in chromium code are using "#ifdef WEBKIT_IMPLEMENTATION" instead of "#if WEBKIT_IMPLEMENTATION". WEBKIT_IMPLEMENTATION is defined as 0 in WebCommon.h if that symbol is not already defined. This means that #ifdef may be incorrect depending on what gets included. Its probably a good idea to fix this now, to avoid build headaches later. Patch coming in a moment; Also cc'ing people who originally wrote those #ifdef statements, just in case they are actually correct for some reason?
Attachments
Patch (2.59 KB, patch)
2012-06-25 18:04 PDT, Shawn Singh
no flags
Shawn Singh
Comment 1 2012-06-25 18:04:47 PDT
WebKit Review Bot
Comment 2 2012-06-25 18:06:46 PDT
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
James Robinson
Comment 3 2012-06-25 18:11:14 PDT
Comment on attachment 149413 [details] Patch Thanks for fixing this - we've had some real bugs due to this in the past, I believe. We should probably add a style check for this - could you file a bug to track that? (Tools/Scripts/webkitpy/style/checkers/cpp.py if you're feeling super ambitious :) ).
WebKit Review Bot
Comment 4 2012-06-26 09:24:00 PDT
Comment on attachment 149413 [details] Patch Clearing flags on attachment: 149413 Committed r121264: <http://trac.webkit.org/changeset/121264>
WebKit Review Bot
Comment 5 2012-06-26 09:24:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.